[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "panda-lift-pixels"
version = "1.0.0"
description = "Frozen pixel-based Panda Lift environment and grader for KSE RL Project 2"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Yurii Hannich" }]

# Core dependencies needed to BUILD the env and GRADE a model.pt (no Stable-Baselines3).
# These pins encode the only stack that works: panda-gym requires numpy<2 and pybullet has no
# wheels for Python 3.12+ (hence requires-python <3.13).
dependencies = [
    "numpy<2",
    "scipy<1.14",
    "gymnasium==1.2.3",
    "pybullet>=3.2.5,<3.3",       # permissive: grab the platform wheel (cp311 manylinux / macos); patch versions behave identically
    "panda-gym==3.0.7",
    "torch>=2.3",                 # loose: GPU torch on Colab / CPU torch in the grader both satisfy
]

[project.optional-dependencies]
# Training extras — installed in Colab/Kaggle via `pip install "panda-lift-pixels[train]"`.
train = [
    "stable-baselines3==2.8.0",
    "sb3-contrib==2.8.0",
    "tensorboard",
    "imageio[ffmpeg]",
]

[tool.setuptools.packages.find]
where = ["src"]
